system/kustomize/metal-operator-remote/manager-remote-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: system
spec:
  strategy:
    type: Recreate
  template:
    spec:
      hostNetwork: true
      containers:
      - name: manager
        args:
        - --mac-prefixes-file=/etc/macdb/macdb.yaml
        - --probe-image=keppel.eu-de-1.cloud.sap/ccloud-ghcr-io-mirror/ironcore-dev/metalprobe:latest
        - --probe-os-image=ghcr.io/ironcore-dev/os-images/gardenlinux:1443.3
        - --insecure=false
        - --registry-url=http://[2a10:afc0:e013:d002::]:30010
        - --manager-namespace=metal-operator-system
        livenessProbe:
          httpGet:
            path: /healthz
            port: 32801
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 32801
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: remote-kubeconfig
          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          readOnly: true
        - mountPath: /etc/macdb/
          name: macdb
      volumes:
      - name: remote-kubeconfig
        secret:
          secretName: metal-operator-remote-kubeconfig
          items:
          - key: token
            path: token
          - key: bundle.crt
            path: ca.crt
      - name: macdb
        secret:
          secretName: macdb
