system/kustomize/metal-operator-remote/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metal-registry-service
  namespace: metal-operator-system
spec:
  selector:
    control-plane: controller-manager
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
  type: NodePort
